--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.6.0-2pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Wed, 09 Jun 2021 15:42:31 +0000
+
 defusedxml (0.6.0-2) unstable; urgency=medium
 
   [ Ondřej Nový ]
