--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.6.0-2pexip4) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:08 +0100
+
 defusedxml (0.6.0-2pexip3) pexip; urgency=medium
 
   * Rebuild for source upload to main.
