Main bullseye build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.6.0-2pexip5) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 13:55:05 +0100
+
 defusedxml (0.6.0-2pexip4) pexip; urgency=medium
 
   * Initial bullseye build
