--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.6.0-2pexip6) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:31:30 +0100
+
 defusedxml (0.6.0-2pexip5) pexip-bullseye; urgency=medium
 
   * Main bullseye build
