--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.7.1-2pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 09:57:38 +0000
+
 defusedxml (0.7.1-2) unstable; urgency=medium
 
   [ Debian Janitor ]
