Bookworm build for product distribution

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.7.1-2pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:52:12 +0000
+
 defusedxml (0.7.1-2pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
