--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+defusedxml (0.7.1-2+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 15:55:31 +0000
+
 defusedxml (0.7.1-2pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
